# fly-and-shoot

./: .gitignore  CREDITS.TXT  Cargo.toml  README.md  build-release.sh  build-web.sh  setup.txt
.cargo/: config.toml
src/: anim.rs  audio.rs  background.rs  bullet.rs  collision.rs  debug.rs  enemy.rs  explosion.rs  game_over.rs  main.rs  player.rs  score.rs  state.rs  title.rs
web/: index.html
