[package]
name = "flyandshoot"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
bevy-inspector-egui = { version = "0.12.1", optional = true }

[dependencies.bevy]
version = "0.8.0"
default-features = false
features = [
    "bevy_sprite",
    "bevy_asset",
    "bevy_ui",
    "bevy_render",
    "bevy_core_pipeline",
    "png",
    "bevy_audio",
    "vorbis",
    "bevy_text"
]

[features]
default = []
dynamic = ["bevy/dynamic"]
inspector = ["dep:bevy-inspector-egui"]
wayland = ["bevy/wayland"]
x11 = ["bevy/x11"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
